fix line type on safari

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1895,7 +1895,7 @@ p {
     &--is-selected {
       svg {
         line {
-          stroke: $color-white;
+          stroke: $color-dark;
         }
       }
     }
